[gd_scene load_steps=2 format=3 uid="uid://ib5lag68lpog"]

[ext_resource type="Script" path="res://addons/dialogue_creator/main.gd" id="1_ekc1o"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekc1o")

[node name="GraphEdit" type="GraphEdit" parent="."]
clip_contents = false
layout_mode = 0
offset_top = 50.0
offset_right = 1920.0
offset_bottom = 970.0
scroll_offset = Vector2(-500, -160)
right_disconnects = true

[node name="AddNode" type="Button" parent="."]
layout_mode = 0
offset_left = 821.0
offset_top = 9.0
offset_right = 945.0
offset_bottom = 41.0
text = "Add New Node"

[node name="ResetCounter" type="Button" parent="."]
layout_mode = 0
offset_left = 958.0
offset_top = 9.0
offset_right = 1097.0
offset_bottom = 41.0
text = "Reset ID Counter"

[node name="LoadJson" type="Button" parent="."]
offset_left = 555.0
offset_top = 9.0
offset_right = 657.0
offset_bottom = 41.0
text = "Load JSON"

[node name="CreateJson" type="Button" parent="."]
layout_mode = 0
offset_left = 438.0
offset_top = 9.0
offset_right = 540.0
offset_bottom = 41.0
text = "Create JSON"

[node name="FileName" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 151.0
offset_top = 9.0
offset_right = 426.0
offset_bottom = 40.0
placeholder_text = "Enter File/Character Name Here..."

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 12.0
offset_right = 147.0
offset_bottom = 35.0
text = "Character Name:
"

[connection signal="connection_drag_started" from="GraphEdit" to="." method="_on_graph_edit_connection_drag_started"]
[connection signal="connection_request" from="GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="connection_to_empty" from="GraphEdit" to="." method="_on_graph_edit_connection_to_empty"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="pressed" from="AddNode" to="." method="_on_add_node_pressed" binds= [1, Vector2(20, 20), false]]
[connection signal="pressed" from="ResetCounter" to="." method="_on_reset_counter_pressed"]
[connection signal="pressed" from="LoadJson" to="." method="_on_load_json_pressed"]
[connection signal="pressed" from="CreateJson" to="." method="_on_create_json_pressed"]
